--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,8 +4,11 @@
     <title>Sunless</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./materialdesign/material.min.css">
+    <script src="./materialdesign/material.min.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="./materialdesign/my-styles.css">
+
     <!-- 1. Load libraries -->
     <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
@@ -15,11 +18,18 @@
     <!-- 2. Configure SystemJS -->
     <script src="systemjs.config.js"></script>
     <script>
-        System.import('app').catch(function(err){ console.error(err); });
+        System.import('app').catch(function (err) {
+            console.error(err);
+        });
     </script>
+
 </head>
 <!-- 3. Display the application -->
-<body>
-<my-app>Loading...</my-app>
+<body class="mdl-demo mdl-color--grey-100 mdl-color-text--grey-700 mdl-base">
+    <my-app>
+        <div class="mdl-spinner mdl-spinner--single-color mdl-js-spinner is-active"
+             style="margin-left: 50%; margin-top: 50%"></div>
+    </my-app>
+<script src="https://code.getmdl.io/1.2.1/material.min.js"></script>
 </body>
 </html>
