Admin panel; Added admin panel which allows a user with admin privileges to display and delete users from userbase;

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./materialdesign/material.min.css">
     <script src="./materialdesign/material.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="./materialdesign/my-styles.css">
+    <link rel="stylesheet" href="./my-styles.css">
 
     <!-- 1. Load libraries -->
     <!-- Polyfill(s) for older browsers -->
